--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,11 @@
             <artifactId>log4j-core</artifactId>
             <version>RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
     </dependencies>
 
     <build>
